--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ ul li a:hover{
     top: 0;
     z-index: -1;
     overflow-x: hidden;
+    cursor: pointer; 
     /* background-color: aquamarine; */
 }
 
@@ -464,5 +465,6 @@ ul li a:hover{
         }
     }
 }
+
 
 /* ////start sec5/////// */
